Ashikhmin-Shirley distribution of glossy shader at 0 roughness causes artifacts when background uses MIS #44113

Closed
opened 2015-03-24 11:36:37 +01:00 by Gottfried Hofmann · 9 comments

System Information
Win7 64bit, Quadro 4000

Blender Version
Broken: 2.73a, 2.74 RC2, both win x64

Short description of error

Ashikhmin-Shirley distribution of glossy shader at 0 roughness causes artifacts when background uses MIS. The artifacts look different depending on the device used (CPU or GPU) and depending on the kind of render (viewport or real render using F12).

Render GPU: http://www.pasteall.org/pic/85747
Render CPU: http://www.pasteall.org/pic/85748

Viewport GPU: http://www.pasteall.org/pic/85745
Viewport CPU: http://www.pasteall.org/pic/85746

Note: I know that for roughness 0 a glossy shader should be set to sharp and that MIS is bad when the background has just simple gradients, but setups like this happen sometimes...

Exact steps for others to reproduce the error

  • Open attached .blend: ashik.rough0.mis.bug.blend
  • Set viewport to rendered
  • Try both CPU and GPU
  • Try rendering
  • Changing distribution on glossy shader, increasing roughness on glossy shader, turning off MIS on world all solve the problem
**System Information** Win7 64bit, Quadro 4000 **Blender Version** Broken: 2.73a, 2.74 RC2, both win x64 **Short description of error** Ashikhmin-Shirley distribution of glossy shader at 0 roughness causes artifacts when background uses MIS. The artifacts look different depending on the device used (CPU or GPU) and depending on the kind of render (viewport or real render using F12). Render GPU: http://www.pasteall.org/pic/85747 Render CPU: http://www.pasteall.org/pic/85748 Viewport GPU: http://www.pasteall.org/pic/85745 Viewport CPU: http://www.pasteall.org/pic/85746 Note: I know that for roughness 0 a glossy shader should be set to sharp and that MIS is bad when the background has just simple gradients, but setups like this happen sometimes... **Exact steps for others to reproduce the error** - Open attached .blend: [ashik.rough0.mis.bug.blend](https://archive.blender.org/developer/F154661/ashik.rough0.mis.bug.blend) - Set viewport to rendered - Try both CPU and GPU - Try rendering - Changing distribution on glossy shader, increasing roughness on glossy shader, turning off MIS on world all solve the problem

Changed status to: 'Open'

Changed status to: 'Open'

Added subscriber: @GottfriedHofmann

Added subscriber: @GottfriedHofmann
Sergey Sharybin was assigned by Bastien Montagne 2015-03-24 12:09:14 +01:00

Added subscriber: @mont29

Added subscriber: @mont29

Sergey, think that one is for you. ;)

Sergey, think that one is for you. ;)

This issue was referenced by af399884e1

This issue was referenced by af399884e16e263062e19ed921608d1003e62f6d

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit af399884e1.

Closed by commit af399884e1.

This issue was referenced by blender/cycles@f02545b309

This issue was referenced by blender/cycles@f02545b309d1aa3284b05ac863de5ee61488cde3

This issue was referenced by 114d1b23d2

This issue was referenced by 114d1b23d298a9a5ddb6201046ec8b9e74661b7e
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#44113
No description provided.