Fix T44113: Ashikhmin-Shirley distribution of glossy shader at 0 roughness causes artifacts when background uses MIS

Was a division by zero error, solved in the same way as beckmann/ggx
deals with small roughness values.